<resources>
    <string name="app_name">CustomerApp</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="preparing_tokens">Preparing tokens based on identity</string>
    <string name="lets_start">Lets Start</string>
    <string name="term_condtions_data">EmCash allows you to transact using a bank-issued virtual account number representing a credit or debit card you register with EmCash (a "Virtual Account Number"), a transit agency pass you register with EmCash (a "Transit Pass"), and a digital wallet or account that you have with a company other than EmPay and link to EmCash in order to enable additional payment functionality (a "Linked Third-Party Account"). Virtual Account Numbers, Transit Passes, and Linked Third-Party Accounts (collectively, "Payment Instruments") may be used: (i) at participating merchant or transit locations, using an eligible NFC mobile device (which may include an eligible Android Wear device) and either the EmCash application
Payment cards saved to your separate  Payments account are distinct from any Virtual Account Numbers you registered with EmCash Payment cards saved to your separate Google Payments account are distinct from any Virtual Account Numbers you registered with EmCash
Payment cards saved to your separate  Payments account are distinct from any Virtual Account Numbers you registered with EmCash Payment cards saved to your separate Google Payments account are distinct from any Virtual Account Numbers you registered with EmCash</string>
    <string name="next">Next</string>
    <string name="accept">I Accept</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_your_own_identity">Create your own Identity</string>
    <string name="hassle_free_emcash_transfer">Hassle free EmCash transfer</string>
    <string name="prepare_your_own_emcash">Prepare your own EmCash</string>
    <string name="dummy_desc">EmCash allows you to transact using a bank-issued virtual account number representing a credit or debit card you register with EmCash (a "Virtual Account Number"), a transit agency pass you register with EmCash (a "Transit Pass"), and a digital wallet or account that you have with a company other than EmPay and link to EmCash in order to enable additional payment functionality (a "Linked Third-Party Account"). Virtual Account Numbers, Transit Passes, and Linked Third-Party Accounts (collectively, "Payment Instruments") may be used: (i) at participating merchant or transit locations, using an eligible NFC mobile device (which may include an eligible Android Wear device) and either the EmCash application
Payment cards saved to your separate  Payments account are distinct from any Virtual Account Numbers you registered with EmCash Payment cards saved to your separate Google Payments account are distinct from any Virtual Account Numbers you registered with EmCash
Payment cards saved to your separate  Payments account are distinct from any Virtual Account Numbers you registered with EmCash Payment cards saved to your separate Google Payments account are distinct from any Virtual Account Numbers you registered with EmCash</string>
    <string name="reject">Reject</string>
    <string name="get_your_rewards">Get Your Rewards</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="how_it_works">How it works?</string>
    <string name="emcash_prepared">EmCash Prepared !</string>
    <string name="new_payment">New Payment</string>
    <string name="your_emcash_balance">Your EmCash Balance</string>
    <string name="add_emcash">Add EmCash</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_transaction_history">My Transaction History</string>
    <string name="view_all">View All</string>
    <string name="analysing_your_score">Analysing your Score ...</string>
    <string name="preparing_tokens_based_on_identity">Preparing tokens based on identity</string>
    <string name="convert_to_cash">Convert to Cash</string>
    <string name="load_emcash">Load EmCash</string>
    <string name="my_activities">My Activities</string>
    <string name="emcash">EmCash</string>
    <string name="balance">Balance</string>
    <string name="load_my_safebox">Load My SafeBox</string>
    <string name="description">Description...</string>
    <string name="empay">EmPay</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="welcome">Welcome</string>
    <string name="view_my_safe_box">View My Safe Box</string>
    <string name="start_your_first_lending">Start your First Lending</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="gethelp">Get Help</string>
    <string name="convert_emcash_to_cash">Convert EmCash to Cash</string>
    <string name="enter_iban">Enter IBAN</string>
    <string name="all">All</string>
    <string name="inbound">Inbound</string>
    <string name="outbound">Outbound</string>
    <string name="payment_recieved">Payment Received</string>
    <string name="total_rewards">Total Rewards</string>
    <string name="redeem">Redeem</string>
    <string name="send_emcash_amp_earn_rewards"><![CDATA[Send EmCash & earn Rewards]]></string>
    <string name="got_it">Got it</string>
    <string name="dont_show_this_again">Dont show this again</string>
    <string name="rationale_camera">This app need your permission to use camera for scanning QR codes</string>
    <string name="my_emscore">My EmScore</string>
    <string name="transfer_emcash">Transfer EmCash</string>
    <string name="transfer">Transfer</string>
    <string name="send_emcash_earn_reward"><![CDATA[Send EmCash & Earn Reward]]></string>
    <string name="transaction_id">Transaction ID</string>
    <string name="emcash_pin">EmCash Pin</string>
    <string name="transition_coin">coin_image</string>
    <string name="how_does_it_work">How does it work?</string>
    <string name="send_token_rewards"><![CDATA[Send your Token & earn Rewards]]></string>
    <string name="paymen_made">Payment Made</string>
    <string name="reward_high">High</string>
    <string name="reward_medium">Medium</string>
    <string name="reward_low">Low</string>
    <string name="notification">Notifications</string>
    <string name="defaultChannel">Emcash</string>
    <string name="notificationDescription">Notifications for Emcash</string>
    <string name="deepLinkNotificationTitle">deepLinkNotificationTitle</string>
    <string name="empty_transactions_date">You don\'t have any transactions in this date.</string>
    <string name="empty_transactions">You don\'t have any transactions.</string>
    <string name="add_bank_account">Add Bank Account</string>
    <string name="please_add_bank_account_details_to_continue">Please add bank account details to continue .</string>
    <string name="submit">Submit</string>
    <string name="log_out">Log Out</string>
    <string name="are_you_sure_that_you_want_to_logout_from_emcash">Are you sure that you want to logout from Emcash ?</string>
    <string name="error_load_emcash_empty">Enter a valid amount of EmCash to be Added.</string>
    <string name="error_empty_emcash_amount">Enter a valid amount of EmCash to be Added.</string>
    <string name="payment_sent">Payment Sent</string>
    <string name="payment_success">Payment Success</string>
    <string name="request_success">Request Success</string>
    <string name="payment_pending">Payment Pending</string>
    <string name="request_pending">Request Pending</string>
    <string name="payment_failed">Payment Failed</string>
    <string name="request_failed">Request Failed</string>
    <string name="payment_rejected">Payment Rejected</string>
    <string name="request_rejected">Request Rejected</string>
    <string name="payment_initiated">Payment Intiated</string>
    <string name="handshaked">Handshaked</string>
    <string name="you">You</string>
    <string name="refresh">Refresh</string>
    <string name="block_account">Block Account</string>
    <string name="unblock_account">Unblock Account</string>
    <string name="block_success">This user has been blocked.</string>
    <string name="block">Block</string>
    <string name="unblock_success">This user has been unblocked.</string>
    <string name="internal_error">Something went wrong.Please try again later.</string>
    <string name="error_transfer">Transfer Failed.Try again after some time.</string>
    <string name="error_future_date_selected">Please avoid dates from future.</string>
    <string name="error_select_start_end_date">Select start date and end date</string>
    <string name="two_days">2 Days</string>
    <string name="one_week">1 Week</string>
    <string name="one_month">1 Month</string>
    <string name="custom">Custom</string>
    <string name="empty_notifications">You have no new notifications</string>
    <string name="my_reward_level">My Reward Level</string>
    <string name="my_safe_box">My SafeBox</string>
    <string name="internet_required">Internet Connection Required.</string>
    <string name="emcash_converted">EmCash has been converted successfully</string>
    <string name="continue_info">Continue</string>
    <string name="emcash_load_success">EmCash loaded successfully</string>
    <string name="invalid_amount">Please enter a valid amount</string>
    <string name="enter_all_field">Please enter all fields</string>
    <string name="add_bank_details">Add Bank Details</string>
    <string name="please_add_your_bank_details">Please add your bank details</string>
    <string name="edit_bank_details">Edit Bank Details</string>
    <string name="edit_bank_details_Desc">Edit your bank account details</string>

</resources>