<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/white_upper_cut"
    android:layout_height="500dp">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_info_how_it_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/biennale_medium"
            android:text="@string/how_does_it_work"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_info_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/biennale_regular"
            android:text="@string/send_emcash_amp_earn_rewards"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_info_how_it_work"
            app:layout_constraintStart_toStartOf="@+id/tv_info_how_it_work"
            app:layout_constraintTop_toBottomOf="@+id/tv_info_how_it_work" />

        <com.emcash.customerapp.utils.CoinProfileImageView
            android:id="@+id/iv_coin_dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:coin_size="medium"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="@+id/tv_info_desc"
            app:layout_constraintStart_toStartOf="@+id/tv_info_desc"
            app:layout_constraintTop_toBottomOf="@+id/tv_info_desc" />

        <Button
            android:id="@+id/btn_got_it"
            style="@style/BlueRoundedButton"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/got_it"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_dont_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/biennale_regular"
            android:text="@string/dont_show_this_again"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_got_it"
            app:layout_constraintEnd_toEndOf="@+id/btn_got_it"
            app:layout_constraintStart_toStartOf="@+id/btn_got_it" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:fontFamily="@font/biennale_regular"
            android:gravity="center"
            android:lineHeight="20dp"
            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit,
sed do eiusmod tempor incididunt ."
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_dont_show"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_coin_dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>