<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_blue"
    tools:context=".ui.prepare.PrepareEmCashActivity">



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <TextView
        style="@style/WhiteRoundedTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_start"
        android:id="@+id/tv_lets_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp40"
        android:fontFamily="@font/biennale_book"
        android:text="@string/how_it_works"
        android:textColor="@color/white"
        android:textSize="@dimen/sp16"
        app:layout_constraintBottom_toTopOf="@+id/tv_lets_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

<!--    <androidx.appcompat.widget.AppCompatImageView-->
<!--        android:id="@+id/iv_dp"-->
<!--        android:transitionName="dp"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:src="@drawable/into_image_coin"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/guideline5"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="@+id/guideline5"-->
<!--        app:layout_constraintVertical_bias="0.44" />-->

    <com.emcash.customerapp.utils.CoinProfileImageView
        android:id="@+id/iv_dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dp12"
        android:transitionName="coin_image"
        app:coin_size="semi_large"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/dp8"
        android:src="@drawable/shadow_white"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline5" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha=".4"
        android:layout_marginTop="24dp"
        android:id="@+id/iv_coin_shadow_bottom"
        android:elevation="@dimen/sp14"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@+id/iv_dp"
        app:layout_constraintStart_toStartOf="@+id/iv_dp"
        app:layout_constraintTop_toBottomOf="@+id/iv_dp"
        app:srcCompat="@drawable/ic_coin_shadow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/biennale_regular"
        android:text="@string/emcash_prepared"
        android:textColor="@color/white"
        android:textSize="@dimen/dp24"
        android:layout_marginTop="@dimen/dp24"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_coin_shadow_bottom"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>