<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.convert_emcash.ConvertEmcashActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp24"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_arrow"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/tv_info_load"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/biennale_regular"
        android:text="@string/convert_emcash_to_cash"
        android:textColor="@color/black"
        android:textSize="@dimen/sp18"
        app:layout_constraintBottom_toBottomOf="@+id/iv_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iv_back" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/emcash_input_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".25" />

    <EditText
        android:id="@+id/et_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:focusable="true"
        android:fontFamily="@font/biennale_bold"
        android:hint="00"
        android:inputType="number"
        android:maxLength="5"
        android:maxLines="1"
        android:focusedByDefault="true"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@+id/emcash_input_guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/emcash_input_guide" />

    <TextView
        android:id="@+id/tv_info_emcash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/biennale_bold"
        android:text="@string/emcash"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/et_value"
        app:layout_constraintStart_toStartOf="@+id/et_value"
        app:layout_constraintTop_toBottomOf="@+id/et_value" />

    <EditText
        android:id="@+id/et_iban"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/grey_rounded_bg"
        android:hint="@string/enter_iban"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:padding="18dp"
        android:layout_margin="32dp"
        android:maxLines="1"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_emcash"
        android:inputType="text" />

    <TextView
        android:id="@+id/tv_equals"
        android:layout_width="@dimen/dp200"
        android:layout_height="wrap_content"
        android:background="@drawable/light_blue_rounded_bg"
        android:fontFamily="@font/biennale_regular"
        android:gravity="center"
        android:paddingStart="@dimen/dp32"
        android:paddingTop="@dimen/dp12"
        android:paddingEnd="@dimen/dp32"
        android:paddingBottom="@dimen/dp12"
        android:text="1 AED = 1 EmCash"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/blue_42"
        app:layout_constraintEnd_toEndOf="@+id/et_iban"
        app:layout_constraintStart_toStartOf="@+id/et_iban"
        app:layout_constraintTop_toBottomOf="@+id/et_iban" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/app_blue"
        android:src="@drawable/ic_baseline_done_24"
        android:layout_marginBottom="@dimen/dp24"
        android:layout_marginEnd="@dimen/dp24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>