<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp24"
        android:padding="10dp"
        android:onClick="onClick"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_arrow"
        app:tint="@color/black" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp16"
        android:padding="10dp"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_back"
        app:srcCompat="@drawable/ic_pencil" />

    <FrameLayout
        android:id="@+id/fl_user_dp"
        android:layout_width="103dp"
        android:layout_height="103dp"
        android:layout_marginTop="@dimen/sp14"
        android:background="@drawable/yellow_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_back">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_user_image"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:layout_gravity="center"
            android:src="@drawable/sample_round_dp" />

    </FrameLayout>

    <TextView
        android:id="@+id/tv_info_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp20"
        android:alpha=".6"
        android:fontFamily="@font/biennale_book"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="@+id/fl_user_dp"
        app:layout_constraintStart_toStartOf="@+id/fl_user_dp"
        app:layout_constraintTop_toBottomOf="@+id/fl_user_dp" />

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp12"
        android:fontFamily="@font/biennale_semi_bold"
        android:text="Ali Ahammed"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_info_welcome"
        app:layout_constraintStart_toStartOf="@+id/tv_info_welcome"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_welcome" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_goto_wallet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:onClick="onClick"
        app:cardBackgroundColor="@color/sky_blue_light"
        app:cardCornerRadius="@dimen/dp12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_name">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="17dp"
                android:fontFamily="@font/biennale_medium"
                android:text="@string/view_my_safe_box"
                android:textColor="@color/blue_bright"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:tint="@color/blue_bright"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView2"
                app:srcCompat="@drawable/arrow_forward" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_lend"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        app:cardBackgroundColor="@color/blue_bright"
        app:cardCornerRadius="@dimen/dp12"
        android:onClick="onClick"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_goto_wallet">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_info_lend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="17dp"
                android:layout_marginBottom="17dp"
                android:fontFamily="@font/biennale_medium"
                android:text="@string/start_your_first_lending"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="30dp"
                android:tint="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/tv_info_lend"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_info_lend"
                app:srcCompat="@drawable/arrow_forward" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/ll_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:onClick="onClick"
        android:orientation="horizontal"
        android:padding="@dimen/dp8"
        app:layout_constraintStart_toStartOf="@+id/cv_lend"
        app:layout_constraintTop_toBottomOf="@+id/cv_lend">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_lock" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/biennale_medium"
            android:text="@string/terms_and_conditions"
            android:textColor="@color/black"
            android:textSize="@dimen/sp14" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:onClick="onClick"
        android:orientation="horizontal"
        android:padding="@dimen/dp8"
        app:layout_constraintStart_toStartOf="@+id/ll_terms"
        app:layout_constraintTop_toBottomOf="@+id/ll_terms">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_info" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/biennale_medium"
            android:text="@string/gethelp"
            android:textColor="@color/black"
            android:textSize="@dimen/sp14" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:onClick="onClick"
        android:orientation="horizontal"
        android:padding="@dimen/dp8"
        app:layout_constraintStart_toStartOf="@+id/ll_help"
        app:layout_constraintTop_toBottomOf="@+id/ll_help">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_logout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/biennale_medium"
            android:text="Logout"
            android:textColor="@color/black"
            android:textSize="@dimen/sp14" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>